[gd_scene load_steps=17 format=3 uid="uid://cnbsxpkb1u631"]

[ext_resource type="Script" uid="uid://bve5qdqyhwaoi" path="res://Scripts/end_turno.gd" id="1_50glp"]
[ext_resource type="Script" uid="uid://d0r6h0jng6q1u" path="res://Scripts/player_card_manager.gd" id="1_i0p2h"]
[ext_resource type="Script" uid="uid://i5svuxu5opue" path="res://Scripts/turn_manager.gd" id="3_1p5hy"]
[ext_resource type="PackedScene" uid="uid://bhjvsqvu80cv3" path="res://Scenes/input_manager.tscn" id="3_frkhe"]
[ext_resource type="Script" uid="uid://cimdsq3cl0dr1" path="res://Scripts/visual_card_interaction.gd" id="3_vy5pj"]
[ext_resource type="PackedScene" uid="uid://bmo7nf5hrx20k" path="res://Scenes/player_hand.tscn" id="4_31u2b"]
[ext_resource type="PackedScene" uid="uid://bie86qndjcm40" path="res://Scenes/player__card_deck.tscn" id="4_rgh2o"]
[ext_resource type="PackedScene" uid="uid://fgsnvc4ac4q2" path="res://Scenes/opponent_card_deck.tscn" id="6_v1gob"]
[ext_resource type="PackedScene" uid="uid://dq11ia4sprhgh" path="res://Scenes/player_table.tscn" id="8_1p5hy"]
[ext_resource type="PackedScene" uid="uid://dlypctmtyl3pk" path="res://Scenes/opponent_table.tscn" id="9_h1m7h"]
[ext_resource type="Script" uid="uid://wuof2sggb1on" path="res://Scripts/battle_manager.gd" id="10_bmxlf"]
[ext_resource type="Script" uid="uid://cxxkqsvhj8fnk" path="res://Scripts/opponent_card_deck.gd" id="11_grg3l"]
[ext_resource type="PackedScene" uid="uid://ce0aloxnwn60p" path="res://Scenes/opponent_hand.tscn" id="12_erwvk"]
[ext_resource type="PackedScene" uid="uid://brprmg48a660e" path="res://Scenes/opponent_ia.tscn" id="13_2w5on"]

[sub_resource type="SystemFont" id="SystemFont_pbw6q"]
font_names = PackedStringArray("OCR A")
multichannel_signed_distance_field = true
msdf_pixel_range = 64
msdf_size = 64

[sub_resource type="SystemFont" id="SystemFont_vy5pj"]
font_names = PackedStringArray("OCR A")
multichannel_signed_distance_field = true
msdf_pixel_range = 64
msdf_size = 64

[node name="Main" type="Node2D"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="EndTurno" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1392.0
offset_top = 640.0
offset_right = 1574.0
offset_bottom = 782.0
theme_override_fonts/font = SubResource("SystemFont_pbw6q")
theme_override_font_sizes/font_size = 64
text = "PASS 
TURN"
script = ExtResource("1_50glp")

[node name="TurnNumber" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 1416.0
offset_top = 480.0
offset_right = 1552.0
offset_bottom = 625.0
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/normal_font = SubResource("SystemFont_vy5pj")
theme_override_font_sizes/normal_font_size = 64
text = "5"
scroll_active = false
tab_size = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("10_bmxlf")

[node name="TurnManager" type="Node" parent="."]
script = ExtResource("3_1p5hy")

[node name="TurnTimer" type="Timer" parent="TurnManager"]
one_shot = true

[node name="InputManager" parent="." instance=ExtResource("3_frkhe")]

[node name="VisualManager" type="Node2D" parent="."]
script = ExtResource("3_vy5pj")

[node name="Timer" type="Timer" parent="VisualManager"]

[node name="OpponentIA" parent="." instance=ExtResource("13_2w5on")]

[node name="OpponentCardManager" type="Node2D" parent="."]

[node name="PlayerCardManager" type="Node2D" parent="."]
script = ExtResource("1_i0p2h")

[node name="PlayerHand" parent="." instance=ExtResource("4_31u2b")]

[node name="OpponentHand" parent="." instance=ExtResource("12_erwvk")]

[node name="PlayerCardDeck" parent="." instance=ExtResource("4_rgh2o")]
z_index = -2
position = Vector2(450, 975)

[node name="OpponentCardDeck" parent="." instance=ExtResource("6_v1gob")]
position = Vector2(1470, 100)
script = ExtResource("11_grg3l")

[node name="PlayerTable" parent="." instance=ExtResource("8_1p5hy")]

[node name="OpponentTable" parent="." instance=ExtResource("9_h1m7h")]

[connection signal="pressed" from="Control/EndTurno" to="Control/EndTurno" method="_on_pressed"]
[connection signal="pressed" from="Control/EndTurno" to="TurnManager" method="_on_end_turno_pressed"]
